[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
console_error_panic_hook = "0.1.7"
gloo-net = "0.2.5"
gloo-timers = "0.2.6"
gloo-utils = "0.1.7"
log = "0.4.17"
serde = { version = "1.0.165", features = ["derive"] }
serde_json = "1.0.99"
tracing = "0.1.37"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"

