[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.2"
axum-extra = { version = "0.4.2", features = ["spa"] }
base64 = "0.21.2"
clap = { version = "4.0.32", features = ["derive"] }
hyper = { version = "0.14.27", features = ["full"] }
log = "0.4.17"
serde = { version = "1.0.165", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.24.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

